# nsu-course-3

./: .gitignore  readme.md
db/: README.md
db/project/: home.php  index.php
db/project_rental/: README.md
db/project_salesmen/: README.md  home.php
db/project_test/: README.md  docker-app-example.md
db/sql/: README.md  solomennikov22204.docx  tasks.txt
db/sql_work2/: README.md  create.sql  select.sql  Соломенников Николай 22204.docx
db/work3/: drop.sql  insert.sql
marketing/: ozon_marketing_solomennikov_text.md
math/: README.md
math/task1/: main.py
math/task3/: mian.py
math/task5/: main.py
math/task6/: main.py
mimii/: README.md
mimii/prolog_expert_system/: README.md  main.pl  test.pl
mimii/prolog_introduction/: prog1.pl  prog3.pl  test.pl
mimii/protege/: relatives.properties  relatives.ttl
mimii/semp_tao_exp/: README.md
mimii/semp_tao_relations/: SempTao.ini  draw_sem_net.py  rodst.dm  rodst_short.pm  sem_net.txt
mimii/task_prolog/: prog1.pl~  prog2.pl
mtk/: README.md
mtk/task1/: README.md  main.flow
mtk/task2/: README.md  main.flow
mtk/task3/: README.md  prog1.flow  prog2.flow  prog3.flow
mtk/task4/: README.md  main.flow
mtk/task5/: grammar.lingo  main.flow
mtk/task5-7/: README.md  grammar.lingo  main.flow
mtk/task8-9.1/: README.md  grammarRPN.lingo  (+1 more)
networks/: README.md
notes/: README.md
obsidian/: README.md
os/: README.md
os/task1.6/: CMakeLists.txt  Makefile  README.md  main.c  main.out
os/task1.6/mythread/: Makefile  mythread.c  mythread.h
os/task1.6/src/: main.c
os/task1.6/task1.6_old_version/: Makefile  main.c  main.out
os/task1.6/task1.6_old_version/mythread/: Makefile  mythread.c  mythread.h  stack-0
os/task1.7/: CMakeLists.txt  README.md  main.c
os/task1.7/uthread/: uthread.c  uthread.h
os/task3/: CMakeLists.txt  Makefile  README.md  proxy-ref.c  proxy.c
otu/: README.md
research/: README.md  Соломенников Николай - НИР - набросок.docx  Соломенников_Николай_Александрович_Прил 1_ИЗ на практику_Бакалавриат_ПИиКН_5 семестр.docx  Соломенников_Николай_Александрович_Прил 2_Отчет о практике_Бакалавриат_ПИиКН_5 семестр.docx  Соломенников_Николай_Александрович_Прил 3_Отзыв руководителя практики_Бакалавриат_ПИиКН_5 семестр.docx  Соломенников_Николай_Александрович_Прил 4_Заявление на практику_Бакалавриат_ПИиКН_5 семестр.docx  текст презентации short.docx  текст презентации.docx
tpns/: README.md
(+436 files in other folders)
